[project]
name = "typst_doc"
authors = [
    { name = "Tridz", email = "safwan@tridz.com"}
]
description = "Create better PDFs with Typst, a markup-based typesetting system as powerful as LaTeX but easier."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [    
    "typst"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
